--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
 	// Visuals
-	"workbench.colorTheme": "Monokai Pro",
+	"workbench.colorTheme": "Visual Studio Light",
 	"editor.fontSize": 16,
 	"editor.lineHeight": 1.5,
 
