--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "cnm",
 	"type": "module",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"scripts": {
 		"dev": "astro dev",
 		"start": "astro dev",
@@ -11,6 +11,7 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"dependencies": {
+		"@astrojs/rss": "^2.4.1",
 		"@astrojs/mdx": "^0.19.1",
 		"@astrojs/sitemap": "^1.3.1",
 		"@astrojs/tailwind": "^3.1.2",
