--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"dependencies": {
-		"@astrojs/rss": "^2.4.1",
 		"@astrojs/mdx": "^0.19.1",
+		"@astrojs/rss": "^2.4.1",
 		"@astrojs/sitemap": "^1.3.1",
+		"@astrojs/svelte": "^2.1.1",
 		"@astrojs/tailwind": "^3.1.2",
 		"@fontsource/inter": "^4.5.15",
 		"@fontsource/lora": "^4.5.13",
@@ -23,12 +24,13 @@
 		"astro": "^2.4.5",
 		"rehype-autolink-headings": "^6.1.1",
 		"rehype-slug": "^5.1.0",
+		"svelte": "^3.59.1",
 		"tailwindcss": "^3.3.2",
 		"unplugin-icons": "^0.16.1"
 	},
 	"devDependencies": {
 		"prettier": "^2.8.8",
 		"prettier-plugin-astro": "^0.8.1",
-		"prettier-plugin-tailwindcss": "^0.2.8"
+		"prettier-plugin-tailwindcss": "^0.3.0"
 	}
 }
