Generators are now data-based as YAML

--- a/src/content/generators/mission-generator.yaml
+++ b/src/content/generators/mission-generator.yaml
@@ -1,4 +1,3 @@
----
 title: Генератор заданий
 description: Простой генератор заданий для авантюристов, который тем не менее покрывает практически все возможные варианты
 tables:
@@ -6,12 +5,7 @@ tables:
     results:
       - Крепость
       - Город
-  - table: Средние щиты
+  - table: Извлечение (Добровольное/Принудительное)
     results:
-      - Кавалерийский щит
-      - Пехотный щит
-  - table: Тяжёлые щиты
-    results:
-      - Павиза
-      - Башенный щит
----
+      - Тюрьма
+      - Тюремный лагерь
