--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"dependencies": {
-		"@astrojs/mdx": "^0.19.2",
-		"@astrojs/rss": "^2.4.2",
+		"@astrojs/mdx": "^0.19.4",
+		"@astrojs/rss": "^2.4.3",
 		"@astrojs/sitemap": "^1.3.1",
 		"@astrojs/svelte": "^2.2.0",
 		"@astrojs/tailwind": "^3.1.3",
-		"@fontsource/inter": "^4.5.15",
-		"@fontsource/lora": "^4.5.13",
+		"@fontsource-variable/inter": "^5.0.1",
+		"@fontsource-variable/lora": "^5.0.2",
 		"@iconify-json/game-icons": "^1.1.2",
-		"@iconify-json/tabler": "^1.1.76",
+		"@iconify-json/tabler": "^1.1.77",
 		"@tailwindcss/typography": "^0.5.9",
-		"astro": "^2.5.0",
+		"astro": "^2.5.5",
 		"rehype-autolink-headings": "^6.1.1",
 		"rehype-slug": "^5.1.0",
 		"svelte": "^3.59.1",
@@ -30,7 +30,7 @@
 	},
 	"devDependencies": {
 		"prettier": "^2.8.8",
-		"prettier-plugin-astro": "^0.8.1",
+		"prettier-plugin-astro": "^0.9.1",
 		"prettier-plugin-tailwindcss": "^0.3.0"
 	}
 }
