--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "cnm",
 	"type": "module",
-	"version": "0.0.2",
+	"version": "1.0",
 	"scripts": {
 		"dev": "astro dev",
 		"start": "astro dev",
@@ -11,27 +11,27 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"dependencies": {
-		"@astrojs/mdx": "^0.19.6",
-		"@astrojs/rss": "^2.4.3",
-		"@astrojs/sitemap": "^1.3.3",
-		"@astrojs/svelte": "^2.2.0",
-		"@astrojs/tailwind": "^3.1.3",
-		"@fontsource-variable/inter": "^5.0.2",
-		"@fontsource-variable/lora": "^5.0.3",
-		"@iconify-json/game-icons": "^1.1.2",
-		"@iconify-json/tabler": "^1.1.78",
-		"@tailwindcss/typography": "^0.5.9",
-		"@vercel/analytics": "^1.0.1",
-		"astro": "^2.5.7",
-		"rehype-autolink-headings": "^6.1.1",
-		"rehype-slug": "^5.1.0",
-		"svelte": "^3.59.1",
-		"tailwindcss": "^3.3.2",
-		"unplugin-icons": "^0.16.2"
+		"@astrojs/mdx": "^1.0.0",
+		"@astrojs/rss": "^3.0.0",
+		"@astrojs/sitemap": "^3.0.0",
+		"@astrojs/svelte": "^4.0.0",
+		"@astrojs/tailwind": "^5.0.0",
+		"@fontsource-variable/inter": "^5.0.8",
+		"@fontsource-variable/lora": "^5.0.9",
+		"@iconify-json/game-icons": "^1.1.3",
+		"@iconify-json/tabler": "^1.1.89",
+		"@tailwindcss/typography": "^0.5.10",
+		"@vercel/analytics": "^1.0.2",
+		"astro": "^3.0.8",
+		"rehype-autolink-headings": "^7.0.0",
+		"rehype-slug": "^6.0.0",
+		"svelte": "^4.2.0",
+		"tailwindcss": "^3.3.3",
+		"unplugin-icons": "^0.17.0"
 	},
 	"devDependencies": {
-		"prettier": "^2.8.8",
-		"prettier-plugin-astro": "^0.10.0",
-		"prettier-plugin-tailwindcss": "^0.3.0"
+		"prettier": "~3.0.3",
+		"prettier-plugin-astro": "^0.12.0",
+		"prettier-plugin-tailwindcss": "^0.5.4"
 	}
 }
