--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"dependencies": {
+		"@astrojs/check": "^0.2.0",
 		"@astrojs/mdx": "^1.0.0",
 		"@astrojs/rss": "^3.0.0",
 		"@astrojs/sitemap": "^3.0.0",
@@ -25,8 +26,10 @@
 		"astro": "^3.0.8",
 		"rehype-autolink-headings": "^7.0.0",
 		"rehype-slug": "^6.0.0",
+		"sharp": "^0.32.5",
 		"svelte": "^4.2.0",
 		"tailwindcss": "^3.3.3",
+		"typescript": "^5.2.2",
 		"unplugin-icons": "^0.17.0"
 	},
 	"devDependencies": {
