--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"dependencies": {
-		"@astrojs/check": "^0.8.0",
+		"@ai-sdk/openai": "^0.0.36",
+		"@ai-sdk/svelte": "^0.0.15",
+		"@astrojs/check": "^0.8.1",
 		"@astrojs/mdx": "^3.1.2",
 		"@astrojs/rss": "^4.0.7",
 		"@astrojs/sitemap": "^3.1.6",
@@ -21,8 +23,9 @@
 		"@fontsource-variable/inter": "^5.0.19",
 		"@fontsource-variable/lora": "^5.0.18",
 		"@iconify-json/game-icons": "^1.1.9",
-		"@iconify-json/tabler": "^1.1.116",
+		"@iconify-json/tabler": "^1.1.117",
 		"@tailwindcss/typography": "^0.5.13",
+		"ai": "^3.2.22",
 		"astro": "^4.11.5",
 		"rehype-autolink-headings": "^7.1.0",
 		"rehype-slug": "^6.0.0",
@@ -30,7 +33,8 @@
 		"svelte": "^4.2.18",
 		"tailwindcss": "^3.4.4",
 		"typescript": "^5.5.3",
-		"unplugin-icons": "^0.19.0"
+		"unplugin-icons": "^0.19.0",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"prettier": "~3.3.2",
