--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,15 @@
 	"[css]": {
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	},
-	"dmbinder.chromeExecutablePath": "\\.local-chromium\\win64-686378\\chrome-win\\chrome.exe"
+	"dmbinder.chromeExecutablePath": "\\.local-chromium\\win64-686378\\chrome-win\\chrome.exe",
+	"spellright.language": [
+		"en-US-10-1.",
+		"ru_RU"
+	],
+	"spellright.documentTypes": [
+		"markdown",
+		"latex",
+		"plaintext",
+		"xsl"
+	]
 }
